Bug 773741 - Support touch events in resizers. r=enn