layout/xul/base/src/nsBoxFrame.h
@@ -210,6 +210,13 @@ protected:
 
     nsCOMPtr<nsBoxLayout> mLayoutManager;
 
+    // Get the point associated with this event. Returns true if a single valid
+    // point was found. Otherwise false.
+    bool GetEventPoint(nsGUIEvent *aEvent, nsPoint &aPoint);
+    // Gets the event coordinates relative to the widget offset associated with
+    // this frame. Return true if a single valid point was found.
+    bool GetEventPoint(nsGUIEvent *aEvent, nsIntPoint &aPoint);
+
 protected:
     nsresult RegUnregAccessKey(bool aDoReg);
 
